JDK 17 compatibility (#33)