@@ -452,7 +452,7 @@ class SqsCodecInterceptorTest {
 
         assertThat(decoded.messages())
                 .hasSize(1);
-        assertThat(decoded.messages().getFirst().body())
+        assertThat(decoded.messages().get(0).body())
                 .isEqualTo(PAYLOAD);
     }
 
@@ -484,7 +484,7 @@ class SqsCodecInterceptorTest {
 
         assertThat(decoded.messages())
                 .hasSize(1);
-        assertThat(decoded.messages().getFirst().body())
+        assertThat(decoded.messages().get(0).body())
                 .isEqualTo(PAYLOAD);
     }
 
@@ -508,7 +508,7 @@ class SqsCodecInterceptorTest {
 
         ReceiveMessageResponse decoded = (ReceiveMessageResponse) interceptor.modifyResponse(new ModifyResponseContext(response), new ExecutionAttributes());
 
-        assertThat(decoded.messages().getFirst().body())
+        assertThat(decoded.messages().get(0).body())
                 .isEqualTo(PAYLOAD);
     }
 
@@ -554,9 +554,9 @@ class SqsCodecInterceptorTest {
         ReceiveMessageResponse decoded = (ReceiveMessageResponse) SqsCodecInterceptor.defaultInterceptor()
                 .modifyResponse(new ModifyResponseContext(response), new ExecutionAttributes());
 
-        assertThat(decoded.messages().getFirst())
+        assertThat(decoded.messages().get(0))
                 .isSameAs(message);
-        assertThat(decoded.messages().getFirst().body())
+        assertThat(decoded.messages().get(0).body())
                 .isEqualTo(PAYLOAD);
     }
 
@@ -606,7 +606,7 @@ class SqsCodecInterceptorTest {
 
         ReceiveMessageResponse decoded = (ReceiveMessageResponse) interceptor.modifyResponse(new ModifyResponseContext(response), new ExecutionAttributes());
 
-        assertThat(decoded.messages().getFirst().body())
+        assertThat(decoded.messages().get(0).body())
                 .isEqualTo(PAYLOAD);
     }
 
@@ -655,7 +655,7 @@ class SqsCodecInterceptorTest {
                 new ModifyResponseContext(response),
                 new ExecutionAttributes());
 
-        assertThat(decoded.messages().getFirst().body()).isEqualTo(PAYLOAD);
+        assertThat(decoded.messages().get(0).body()).isEqualTo(PAYLOAD);
     }
 
     @ParameterizedTest
@@ -676,7 +676,7 @@ class SqsCodecInterceptorTest {
         ReceiveMessageResponse decoded = (ReceiveMessageResponse) SqsCodecInterceptor.defaultInterceptor()
                 .modifyResponse(new ModifyResponseContext(response), new ExecutionAttributes());
 
-        assertThat(decoded.messages().getFirst().body()).isEqualTo(PAYLOAD);
+        assertThat(decoded.messages().get(0).body()).isEqualTo(PAYLOAD);
     }
 
     @ParameterizedTest
@@ -733,7 +733,7 @@ class SqsCodecInterceptorTest {
         ReceiveMessageResponse decoded = (ReceiveMessageResponse) SqsCodecInterceptor.defaultInterceptor()
                 .modifyResponse(new ModifyResponseContext(response), new ExecutionAttributes());
 
-        assertThat(decoded.messages().getFirst())
+        assertThat(decoded.messages().get(0))
                 .isSameAs(message);
     }
 
@@ -752,7 +752,7 @@ class SqsCodecInterceptorTest {
         ReceiveMessageResponse decoded = (ReceiveMessageResponse) SqsCodecInterceptor.defaultInterceptor()
                 .modifyResponse(new ModifyResponseContext(response), new ExecutionAttributes());
 
-        assertThat(decoded.messages().getFirst())
+        assertThat(decoded.messages().get(0))
                 .isSameAs(message);
     }
 
@@ -772,7 +772,7 @@ class SqsCodecInterceptorTest {
         ReceiveMessageResponse decoded = (ReceiveMessageResponse) SqsCodecInterceptor.defaultInterceptor()
                 .modifyResponse(new ModifyResponseContext(response), new ExecutionAttributes());
 
-        assertThat(decoded.messages().getFirst())
+        assertThat(decoded.messages().get(0))
                 .isSameAs(message);
     }
 
@@ -792,7 +792,7 @@ class SqsCodecInterceptorTest {
         ReceiveMessageResponse decoded = (ReceiveMessageResponse) SqsCodecInterceptor.defaultInterceptor()
                 .modifyResponse(new ModifyResponseContext(response), new ExecutionAttributes());
 
-        assertThat(decoded.messages().getFirst())
+        assertThat(decoded.messages().get(0))
                 .isSameAs(message);
     }
 
